dataset1235/2025-2/2318198438/users/1018361269/executions/2445341515_1210323305.log
== SUBMISSION (2025-09-02 00:17:33)
-- CODE: 
euro =float(input("valor em euro?"))
valorreais= euro*5.25
print(round(valorreais,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
valor em euro?99.75
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
valor em euro?110.25
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
valor em euro?5.25
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
valor em euro?36.75
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
valor em euro?10.5
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
valor em euro?42.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:12:34)
-- CODE: 
x=float(input("valor em reais?"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
valor em reais?
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
valor em reais?
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
valor em reais?
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
valor em reais?
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
valor em reais?
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
valor em reais?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:12:14)
-- CODE: 
float(input("valor em reais?"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
valor em reais?
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
valor em reais?
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
valor em reais?
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
valor em reais?
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
valor em reais?
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
valor em reais?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:16:49)
-- CODE: 
euro =float(input("valor em euro?"))
valorreais= euro*5.25
print(round(euro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
valor em euro?19.0
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
valor em euro?21.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
valor em euro?1.0
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
valor em euro?7.0
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
valor em euro?2.0
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
valor em euro?8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:16:07)
-- CODE: 
euro =float(input("valor em euro?"))
valorreais= euro*5.25
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(round(x,2))
                ^
NameError: name 'x' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:11:54)
-- CODE: 
input(float("valor em reais?"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("valor em reais?"))
          ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("valor em reais?"))
          ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("valor em reais?"))
          ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("valor em reais?"))
          ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("valor em reais?"))
          ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    input(float("valor em reais?"))
          ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:11:33)
-- CODE: 
x=input(float("valor em reais?"))


-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input(float("valor em reais?"))
            ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input(float("valor em reais?"))
            ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input(float("valor em reais?"))
            ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input(float("valor em reais?"))
            ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input(float("valor em reais?"))
            ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    x=input(float("valor em reais?"))
            ^^^^^^^^^^^^^^^^^^^^^^^^
ValueError: could not convert string to float: 'valor em reais?'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-02 00:13:52)
-- CODE: 
x=float(input("valor em euro?"))
valorreais= x*5.25
print(round(x,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
19
---- correct output:
99.75
---- user output:
valor em euro?19.0
-- TEST CASE 2:
---- input:
21
---- correct output:
110.25
---- user output:
valor em euro?21.0
-- TEST CASE 3:
---- input:
1
---- correct output:
5.25
---- user output:
valor em euro?1.0
-- TEST CASE 4:
---- input:
7
---- correct output:
36.75
---- user output:
valor em euro?7.0
-- TEST CASE 5:
---- input:
2
---- correct output:
10.5
---- user output:
valor em euro?2.0
-- TEST CASE 6:
---- input:
8
---- correct output:
42.0
---- user output:
valor em euro?8.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
